// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Module Expandable renders correctly with multiple items 1`] = `
<div
  className="box default rounding4 shadow"
>
  <div
    className="box paddingX6 paddingY6"
  >
    <div
      className="Flex rowGap0 columnGap6 xsDirectionColumn"
    >
      <div
        className="FlexItem"
      >
        <div
          aria-controls="uniqueTestID-0"
          aria-disabled={false}
          aria-expanded={false}
          aria-label="Expand section"
          className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          >
            <div
              className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
            >
              <div
                className="box xsCol6"
              >
                <div
                  className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
                >
                  <div
                    className="FlexItem"
                    style={
                      Object {
                        "minWidth": 0,
                      }
                    }
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="Title1"
                    >
                      Title1
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box marginStart6 xsCol6"
              >
                <div
                  className="Flex rowGap0 columnGap2 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="summary1"
                    >
                      summary1
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="box paddingX1 paddingY1 xsDisplayFlex xsItemsCenter"
              id="uniqueTestID-0"
              style={
                Object {
                  "maxHeight": 24,
                }
              }
            >
              <svg
                aria-hidden={null}
                aria-label="Expand section"
                className="default icon iconBlock"
                height="12"
                role="img"
                viewBox="0 0 24 24"
                width="12"
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    className="divider"
  />
  <div
    className="box paddingX6 paddingY6"
  >
    <div
      className="Flex rowGap0 columnGap6 xsDirectionColumn"
    >
      <div
        className="FlexItem"
      >
        <div
          aria-controls="uniqueTestID-1"
          aria-disabled={false}
          aria-expanded={false}
          aria-label="Expand section"
          className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          >
            <div
              className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
            >
              <div
                className="box xsCol6"
              >
                <div
                  className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
                >
                  <div
                    className="FlexItem"
                    style={
                      Object {
                        "minWidth": 0,
                      }
                    }
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="Title2"
                    >
                      Title2
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box marginStart6 xsCol6"
              >
                <div
                  className="Flex rowGap0 columnGap2 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="summary2"
                    >
                      summary2
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="box paddingX1 paddingY1 xsDisplayFlex xsItemsCenter"
              id="uniqueTestID-1"
              style={
                Object {
                  "maxHeight": 24,
                }
              }
            >
              <svg
                aria-hidden={null}
                aria-label="Expand section"
                className="default icon iconBlock"
                height="12"
                role="img"
                viewBox="0 0 24 24"
                width="12"
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    className="divider"
  />
  <div
    className="box paddingX6 paddingY6"
  >
    <div
      className="Flex rowGap0 columnGap6 xsDirectionColumn"
    >
      <div
        className="FlexItem"
      >
        <div
          aria-controls="uniqueTestID-2"
          aria-disabled={false}
          aria-expanded={false}
          aria-label="Expand section"
          className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          >
            <div
              className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
            >
              <div
                className="box xsCol6"
              >
                <div
                  className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
                >
                  <div
                    className="FlexItem"
                    style={
                      Object {
                        "minWidth": 0,
                      }
                    }
                  >
                    <svg
                      aria-hidden={true}
                      aria-label=""
                      className="error icon iconBlock"
                      height={16}
                      role="img"
                      viewBox="0 0 24 24"
                      width={16}
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                  <div
                    className="FlexItem"
                    style={
                      Object {
                        "minWidth": 0,
                      }
                    }
                  >
                    <div
                      className="error alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="Title3"
                    >
                      Title3
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box marginStart6 xsCol6"
              >
                <div
                  className="Flex rowGap0 columnGap2 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="summary3"
                    >
                      summary3
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="box paddingX1 paddingY1 xsDisplayFlex xsItemsCenter"
              id="uniqueTestID-2"
              style={
                Object {
                  "maxHeight": 24,
                }
              }
            >
              <svg
                aria-hidden={null}
                aria-label="Expand section"
                className="default icon iconBlock"
                height="12"
                role="img"
                viewBox="0 0 24 24"
                width="12"
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Module Expandable renders correctly with one item 1`] = `
<div
  className="box default rounding4 shadow"
>
  <div
    className="box paddingX6 paddingY6"
  >
    <div
      className="Flex rowGap0 columnGap6 xsDirectionColumn"
    >
      <div
        className="FlexItem"
      >
        <div
          aria-controls="uniqueTestID-0"
          aria-disabled={false}
          aria-expanded={false}
          aria-label="Expand section"
          className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          >
            <div
              className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
            >
              <div
                className="box xsCol6"
              >
                <div
                  className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
                >
                  <div
                    className="FlexItem"
                    style={
                      Object {
                        "minWidth": 0,
                      }
                    }
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="Title"
                    >
                      Title
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box marginStart6 xsCol6"
              >
                <div
                  className="Flex rowGap0 columnGap2 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="summary1"
                    >
                      summary1
                    </div>
                  </div>
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="summary2"
                    >
                      summary2
                    </div>
                  </div>
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="summary3"
                    >
                      summary3
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="box paddingX1 paddingY1 xsDisplayFlex xsItemsCenter"
              id="uniqueTestID-0"
              style={
                Object {
                  "maxHeight": 24,
                }
              }
            >
              <svg
                aria-hidden={null}
                aria-label="Expand section"
                className="default icon iconBlock"
                height="12"
                role="img"
                viewBox="0 0 24 24"
                width="12"
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with multiple items with expandedId 1`] = `
<div
  className="box default rounding4 shadow"
>
  <div
    className="box paddingX6 paddingY6"
  >
    <div
      className="Flex rowGap0 columnGap6 xsDirectionColumn"
    >
      <div
        className="FlexItem"
      >
        <div
          aria-controls="uniqueTestID-0"
          aria-disabled={false}
          aria-expanded={true}
          aria-label="click to collapse"
          className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          >
            <div
              className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
            >
              <div
                className="box xsCol12"
              >
                <div
                  className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
                >
                  <div
                    className="FlexItem"
                    style={
                      Object {
                        "minWidth": 0,
                      }
                    }
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="Title1"
                    >
                      Title1
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="box paddingX1 paddingY1 xsDisplayFlex xsItemsCenter"
              id="uniqueTestID-0"
              style={
                Object {
                  "maxHeight": 24,
                }
              }
            >
              <svg
                aria-hidden={null}
                aria-label="click to collapse"
                className="default icon iconBlock"
                height="12"
                role="img"
                viewBox="0 0 24 24"
                width="12"
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        className="FlexItem"
      >
        Children1
      </div>
    </div>
  </div>
  <hr
    className="divider"
  />
  <div
    className="box paddingX6 paddingY6"
  >
    <div
      className="Flex rowGap0 columnGap6 xsDirectionColumn"
    >
      <div
        className="FlexItem"
      >
        <div
          aria-controls="uniqueTestID-1"
          aria-disabled={false}
          aria-expanded={false}
          aria-label="click to expand"
          className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          >
            <div
              className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
            >
              <div
                className="box xsCol6"
              >
                <div
                  className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
                >
                  <div
                    className="FlexItem"
                    style={
                      Object {
                        "minWidth": 0,
                      }
                    }
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="Title2"
                    >
                      Title2
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box marginStart6 xsCol6"
              >
                <div
                  className="Flex rowGap0 columnGap2 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="summary2"
                    >
                      summary2
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="box paddingX1 paddingY1 xsDisplayFlex xsItemsCenter"
              id="uniqueTestID-1"
              style={
                Object {
                  "maxHeight": 24,
                }
              }
            >
              <svg
                aria-hidden={null}
                aria-label="click to expand"
                className="default icon iconBlock"
                height="12"
                role="img"
                viewBox="0 0 24 24"
                width="12"
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <hr
    className="divider"
  />
  <div
    className="box paddingX6 paddingY6"
  >
    <div
      className="Flex rowGap0 columnGap6 xsDirectionColumn"
    >
      <div
        className="FlexItem"
      >
        <div
          aria-controls="uniqueTestID-2"
          aria-disabled={false}
          aria-expanded={false}
          aria-label="click to expand"
          className="tapTransition rounding0 accessibilityOutline fullWidth pointer"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionRow"
          >
            <div
              className="box flexGrow marginEnd6 xsDisplayFlex xsItemsBaseline"
            >
              <div
                className="box xsCol6"
              >
                <div
                  className="Flex rowGap3 columnGap0 xsDirectionRow xsItemsCenter"
                >
                  <div
                    className="FlexItem"
                    style={
                      Object {
                        "minWidth": 0,
                      }
                    }
                  >
                    <svg
                      aria-hidden={true}
                      aria-label=""
                      className="error icon iconBlock"
                      height={16}
                      role="img"
                      viewBox="0 0 24 24"
                      width={16}
                    >
                      <path
                        d="test-file-stub"
                      />
                    </svg>
                  </div>
                  <div
                    className="FlexItem"
                    style={
                      Object {
                        "minWidth": 0,
                      }
                    }
                  >
                    <div
                      className="error alignStart breakWord lineClamp Text fontSize300 fontWeightSemiBold"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="Title3"
                    >
                      Title3
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="box marginStart6 xsCol6"
              >
                <div
                  className="Flex rowGap0 columnGap2 xsDirectionColumn"
                >
                  <div
                    className="FlexItem"
                  >
                    <div
                      className="default alignStart breakWord lineClamp Text fontSize200 fontWeightNormal"
                      style={
                        Object {
                          "WebkitLineClamp": 1,
                        }
                      }
                      title="summary3"
                    >
                      summary3
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="box paddingX1 paddingY1 xsDisplayFlex xsItemsCenter"
              id="uniqueTestID-2"
              style={
                Object {
                  "maxHeight": 24,
                }
              }
            >
              <svg
                aria-hidden={null}
                aria-label="click to expand"
                className="default icon iconBlock"
                height="12"
                role="img"
                viewBox="0 0 24 24"
                width="12"
              >
                <path
                  d="test-file-stub"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
